--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#
+Web/Portfolio/src/js/*.js
+Web/Portfolio/src/js/*.js.map
+
 #vscode files
 .vscode
 
