--- a/Web/Portfolio/src/ts/tsconfig.json
+++ b/Web/Portfolio/src/ts/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "lib": ["esnext", "dom"],
+    "module": "es2015",
     "sourceMap": true,
     "outDir": "../js",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "esModuleInterop": true
   },
   "files": [
       "photos.ts",
       "interests.ts",
-      "forms.ts"
+      "contact.ts",
+      "shared.ts",
   ],
   "scripts": {
       "tsbuild": "tsc --build tsconfig.json",
