--- a/Web/Portfolio/src/package.json
+++ b/Web/Portfolio/src/package.json
@@ -9,7 +9,7 @@
   "author": "Gorbenko Kirill",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.7.5",
     "babel-loader": "^8.0.6",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
