--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 #
-Web/Portfolio/src/js/*.js
-Web/Portfolio/src/js/*.js.map
+Web/Portfolio/js/*
 
 #vscode files
 .vscode
