--- a/Web/Portfolio/package.json
+++ b/Web/Portfolio/package.json
@@ -13,5 +13,9 @@
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "@types/jquery": "^3.3.31",
+    "jquery": "^3.4.1"
   }
 }
