--- a/Web/Portfolio/package.json
+++ b/Web/Portfolio/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/tooltipster": "0.0.29",
+    "css-loader": "^3.4.2",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
