--- a/Web/Portfolio/package.json
+++ b/Web/Portfolio/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/tooltipster": "0.0.29",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.5.1",
     "css-loader": "^3.4.2",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
