--- a/Web/Portfolio/app/client-side/package.json
+++ b/Web/Portfolio/app/client-side/package.json
@@ -4,25 +4,30 @@
   "description": "Typescript client side for web technologies portfolio",
   "scripts": {
     "tsbuild": "tsc --project ./src/tsconfig.json",
-    "webpack-build": "npx webpack --config ./webpack.config.js"
+    "webpack-dev": "npx webpack --config ./webpack.config.development.js",
+    "webpack-prod": "npx webpack --config ./webpack.config.production.js",
+    "webpack-watch": "npx webpack --config ./webpack.config.development.js --watch"
   },
   "author": "Gorbenko Kirill",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.0",
     "@types/tooltipster": "0.0.29",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^2.5.1",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-config": "^7.5.0"
   },
   "dependencies": {
-    "@types/jquery": "^3.3.31",
     "jquery": "^3.5.1",
     "tooltipster": "^4.2.7"
   }
