Complete practice report

--- a/Practice/PracticeTestApp/PracticeTestApp/PracticeTestApp.csproj
+++ b/Practice/PracticeTestApp/PracticeTestApp/PracticeTestApp.csproj
@@ -13,6 +13,15 @@
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
+      <Content Update="ClientApp\tsconfig.json">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <TypeScriptCompile Include="ClientApp\src\home\index.ts" />
     </ItemGroup>
 
 </Project>
