--- a/Web/Portfolio/app/client-side/tsconfig.json
+++ b/Web/Portfolio/app/client-side/tsconfig.json
@@ -10,13 +10,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
   },
-  "files": [
-    "./home/photos.ts",
-    "./home/interests.ts",
-    "./home/contact.ts",
-    "./home/test.ts",
-    "./home/index.ts",
-    "./home/about.ts",
-    "./home/learning.ts"
+  "include": [
+    "./src/**/*"
   ]
 }
