--- a/Web/Portfolio/composer.json
+++ b/Web/Portfolio/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "vlucas/valitron": "^1.4"
+        "vlucas/valitron": "^1.4",
+      "ext-pdo": "*",
+      "ext-exif": "*"
     }
 }
